--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/lauragupta/socialBrainstorm#readme",
   "dependencies": {
     "express": "^4.17.3",
-    "mongoose": "^6.2.3"
+    "mongoose": "^6.2.3",
+    "validator": "^13.7.0"
   }
 }
